# nerd-dictation-bazzite

./: Cargo.toml  install-bazzite  pipx-nerd-dictation  readme.rst
examples/language_tool_auto_grammar/: nerd-dictation.py
src/: audio.rs  capture.rs  input.rs  main.rs  pipx.rs  utils.rs
